[tool.poetry]
name = "gradient-langchain-tool-demo"
version = "1.0.0"
description = ""
authors = ["Yang, Bo <yang-bo@yang-bo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chainlit = "^0.7.1"
langchain = { git = "https://github.com/Atry/langchain", branch = "main", subdirectory = "libs/langchain" }
google-api-python-client = "^2.91.0"
numexpr = "^2.8.7"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
